Integration test and test results are now separate